# le-wm

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: architecture_optimization_summary.md  decoder_usage.md  defensive_and_plot_summary.md  monitoring_architecture.md  monitoring_architecture_v2.md  wandb_dashboard_guide.md
docs/superpowers/plans/: 2026-04-17-pipeline-ioc.md
docs/superpowers/specs/: 2026-04-17-pipeline-ioc-design.md
examples/: monitoring_example.py
scripts/: visualize_decoder.py
src/lewm/: __init__.py  eval_app.py  train_app.py
src/lewm/config/: __init__.py
src/lewm/config/eval/: __init__.py
src/lewm/config/eval/launcher/: __init__.py
src/lewm/config/eval/solver/: __init__.py
src/lewm/config/train/: __init__.py  lewm.yaml
src/lewm/config/train/data/: __init__.py  dmc.yaml  ogb.yaml  pusht.yaml  tworoom.yaml
src/lewm/config/train/launcher/: __init__.py
src/lewm/evaluation/: __init__.py  pipeline.py
src/lewm/models/: __init__.py  components.py  decoder.py  jepa.py  regularizers.py  transformer.py
src/lewm/training/: __init__.py  callbacks.py  forward.py  pipeline.py  transforms.py  visualization_callback.py
tests/: test_callbacks.py  test_decoder.py  test_decoder_integration.py  test_jepa_shapes.py  test_package_layout.py  test_packaged_config_layout.py  test_pipeline_ioc.py  test_training_pipeline_import.py  test_visualization_callback.py  verify_architecture_v2.py  verify_defensive_and_plot.py
